Small CSS Fix for Mission Content not fully visible on UltraWide

--- a/src/frontend/pages/Missions/Components/MissionModal/MissionModal.module.scss
+++ b/src/frontend/pages/Missions/Components/MissionModal/MissionModal.module.scss
@@ -49,8 +49,8 @@
   padding: 1.15vh;
   flex: 1;
   width: 83%;
-  font-size: 0.93vw;
-  line-height: 1.25em;
+  font-size: clamp(10px, 1.7vh, 22px);
+  line-height: 1.2em;
   font-weight: 500;
   position: relative;
   left: 7%;
